[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sounds/Jump.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/sounds/hurt.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/enemy hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/Drop.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/bounce.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/click.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/fall.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/Pickup.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/retro platforming.mp3" type="AudioStream" id=9]
[ext_resource path="res://Global/Audio.gd" type="Script" id=10]
[ext_resource path="res://assets/sounds/A bit of hope.mp3" type="AudioStream" id=11]

[node name="audio" type="Node"]
script = ExtResource( 10 )

[node name="bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="drop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="enemyhit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 2.0

[node name="fall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -5.0

[node name="pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="music0" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -8.0

[node name="music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -8.0

[connection signal="finished" from="music0" to="." method="_on_music0_finished"]
[connection signal="finished" from="music1" to="." method="_on_music1_finished"]
